# grimoire

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  pyproject.toml  test.db  testfile
.sqlx/: query-1a32f6effa1478c74dc9fa82ed5f533bccfdc5ec9ddd4e3491d73631627ba972.json  query-43dc0c7dca944754b00ed78e15f6d4923d176ab203004873f7df4c8d9e993773.json  query-53882576689dd7a84724b4f1ff41d1a0969f6079001d298c355c4a91a319f477.json  query-53d89d564042d5785f53bc3539f4e591f59771246b6faee2239c53d261a5111a.json  query-73c2222fb26742fa8032ce512a94ac1a0d8c9c14b04637e7dd82b6ebfc1dd573.json  query-7db64c995305340c16a0d6557c34d4ac2d1c03b981cb080da8d3965f10927104.json  query-8eedac0efb26a399c61a02c5d490c3947ccdaedb007250652ba5efdf99c1586c.json  query-943bfbc6f9d624a1caea767b097bde6c6fe6f4d02549401da675c48046c5099b.json  query-a1c1b6cd006dee0b8bd82aa24015953307109a841cccc123b25d8569819356f2.json  query-a57031d4ffc8cc994039f50aa5b965f75587d3570d981e8dd4fc05902702a6f4.json  query-ada920ffdb30972cdb9799f930ff60ae84399ad3472f51c1c0754244f36172bd.json  query-aebf6c141ed4e04a1dc5acd76e527e9fa5cea4d533fa07e35fe7334d348b01f0.json  query-b13c85b998b4887b971e7c5102f1c40b9db5f2a5b4532821eec18f23855f8d5d.json  query-bdd73d301c347147f82e255891cfbc5081ab30539f9ae368fbcd9c040288bcae.json  query-c50e3cae6a77c3aac008165e4f1fb3e4fc97b3a40252cd8a3faadb0048673389.json  query-f31396bf3e22514bef1af2955fa05d950d1eff8f7b361f635e6035e42ed1d87b.json  query-fcb77023494a32e13cf803cd4f2e55785e981c1289b2a8e28f8c6cf3621ce580.json
contrib/: OWASP-WSTG-TestingOutcomes.xltx  wstg-test-generation.sh
crates/cert-recon/: Cargo.toml
crates/cert-recon/src/: main.rs
crates/dns-recon/: Cargo.toml
crates/dns-recon/src/: main.rs
crates/grimoire/: Cargo.toml
crates/grimoire/src/: lib.rs
crates/http-recon/: Cargo.toml
crates/http-recon/src/: main.rs
kali/: Dockerfile
migrations/: 20240717093437_create_cert_recon_table.down.sql  20240717093437_create_cert_recon_table.up.sql  20240717093437_create_tables.down.sql  20240717093437_create_tables.up.sql  20240717120208_create_dns_recon_table.down.sql  20240717120208_create_dns_recon_table.up.sql  20240717123140_create_http_recon_table.down.sql  20240717123140_create_http_recon_table.up.sql  20240717124913_create_https_recon_table.down.sql  20240717124913_create_https_recon_table.up.sql  20240717191659_add_column_domain_to_http_tables.up.sql  20240717191659_add_column_origin_to_http_tables.down.sql  20240717191659_add_column_origin_to_http_tables.up.sql  20240718063058_add_column_domain_to_dns_recon_table.down.sql  20240718063058_add_column_domain_to_dns_recon_table.up.sql  20240719084613_deny_null_values_in_http_headers.down.sql  20240719084613_deny_null_values_in_http_headers.up.sql
mitmproxy/: Dockerfile
netshoot/: Dockerfile
openvpn/: Dockerfile
postgres/: 000-init-recon-db.sh
proxychains4/: Dockerfile  proxychains4.conf
recon/: Dockerfile  cert-recon.fish  dns-recon.fish  dnslookup.fish  http-recon.fish  http_recon.fish
src/grimoire/: invocation.py  onepassword.py  postgres.py
src/grimoire/chronicle/: formatter_config.py  handler_config.py
tests/: test_ansible_onepassword_client.py  test_chronicle.py
tor/: Dockerfile
