[tool.poetry]
name = "grimoire"
version = "0.1.0"
description = "A collection of spells and notes"
authors = ["Eleanor Young <developer@nausicaea.net>"]
readme = "README.md"
packages = [{include = "grimoire", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
