[tool.poetry]
name = "grimoire"
version = "0.1.0"
description = "A collection of spells and notes"
authors = ["Eleanor Young <developer@nausicaea.net>"]
readme = "README.md"
packages = [{include = "grimoire", from = "src"}]

[tool.poetry.scripts]
ansible-onepassword-client = 'grimoire.onepassword:main'

[tool.poetry.extras]
postgres = ['asyncpg']

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = {version = "^0.27.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.20"
pre-commit = "^2"
black = "^22"
isort = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
